--- a/index.html
+++ b/index.html
@@ -11,26 +11,25 @@
 	</head>
 	<body>
 		<div class="container">
-
 			<header class="header">
 				<h1>All awesome books</h1>
 			 <nav class="navigation">
 				<ul class="nav-lists">
-				 <li id="nav-list"><a href="">List</a> </li>
-				 <li id="nav-add"><a href="">Add New</a> </li>
-				 <li id="nav-contact"><a href="">Contact</a> </li>
+				 <li id="nav-list"><a href="#">List</a> </li>
+				 <li id="nav-add"><a href="#">Add New</a> </li>
+				 <li id="nav-contact"><a href="#">Contact</a> </li>
 				</ul>
 			 </nav>
 			</header>
 			<main>
 			 <section class="time">
-				<span>date here</span>
+				 <span>date here</span>
 			 </section>
 
 			 <section class="list-container">
-				 <h2>All awesome books</h2>
-				 <table id="books-list">
-				 </table>
+      <h2>All awesome books</h2>
+      <table id="books-list">
+      </table>
 			 </section>
 
 			 <section class="form-container">
@@ -42,8 +41,8 @@
 				 </form>
 			 </section>
 
-			 <section class="contact-info">
-				
+			 <section class="contact-container">
+  
 			 </section>
 			 
 			</main>
