Update index.js file

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<body>
 		<div class="container">
 			<header class="header">
-				<h1>All awesome books</h1>
+				<h2>Awesome books</h2>
 			 <nav class="navigation">
 				<ul class="nav-lists">
 				 <li id="nav-list"><a href="#">List</a> </li>
@@ -22,17 +22,18 @@
 			 </nav>
 			</header>
 			<main>
-			 <section class="time">
-				 <span>date here</span>
+			 <section>
+				 <span id="date-time"></span>
 			 </section>
 
 			 <section class="list-container">
-      <h2>All awesome books</h2>
-      <table id="books-list">
-      </table>
+				<h1>All awesome books</h1>
+				<table id="books-list">
+				</table>
 			 </section>
 
 			 <section class="form-container">
+					<h2>Add a new book</h2>
 				 <form id="book-form" action="/" method="post">
 					 <div class="style-me"></div>
 					 <input id="title-input" type="text" placeholder="Title" name="title"><br/><br/>
@@ -42,7 +43,7 @@
 			 </section>
 
 			 <section class="contact-container">
-  
+	
 			 </section>
 			 
 			</main>
