fix linter error

--- a/index.html
+++ b/index.html
@@ -22,10 +22,7 @@
 			 </nav>
 			</header>
 			<main>
-			 <section>
-				 <span id="date-time"></span>
-			 </section>
-
+				<p><span id="date-time"></span></p>
 			 <section class="list-container">
 				<h1>All awesome books</h1>
 				<table id="books-list">
