Add footer section

--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
 				 </form>
 			 </section>
 
-			 <section class="contact-container">
+			 <div class="contact-container">
 	
-			 </section>
+    </div>
 			 
 			</main>
 			<footer>
-
+     <p>Copyright <span>...</span></p>
 			</footer>
 		</div>
 		<script src="index.js"></script>
