--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head >
 		<meta charset="UTF-8">  
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link href="style.css" rel="stylesheet">
+		<link href="index.css" rel="stylesheet">
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap" rel="stylesheet">    
@@ -48,7 +48,7 @@
      <p>Copyright <span>...</span></p>
 			</footer>
 		</div>
-		<script src="index.js"></script>
+		<script type="module" src="index.js"></script>
 	</body>
 	
 </html>
